# FloatTools

./: FloatTools.cpp  FloatTools.h
Google_tests/: CMakeLists.txt  testFloatTools.cpp  testMain.cpp
